--- a/src/index.css
+++ b/src/index.css
@@ -6,8 +6,7 @@
   font-weight: 400;
 
   color-scheme: light dark;
-  color: rgba(255, 255, 255, 0.87);
-  background-color: #242424;
+  background-color: black;
 
   font-synthesis: none;
   text-rendering: optimizeLegibility;
@@ -20,7 +19,7 @@ body {
   display: flex;
   min-width: 320px;
   min-height: 100vh;
-  background-color: FDFCF5;
+  /* background-color: #FDFCF5; */
 }
 
 h1 {
@@ -31,7 +30,7 @@ h1 {
 @media (prefers-color-scheme: light) {
   :root {
     color: #213547;
-    background-color: #ffffff;
+    background-color: black;
   }
 }
 
